# travel-assistant-optimization

./: .env.example  .gitignore  ASSIGNMENT_COVERAGE.md  DEMO_GUIDE.md  OUTPUT_VERIFICATION.md  README.md  SETUP.md  SUCCESS.md  TEST_SCENARIOS.md  check_models.py  demo_output.py  enterprise_chat.py  main.py  pyproject.toml  real_ai_chat.py  requirements.txt  run_dashboard.py  run_server.py  simple_server.py  test_api.py  test_complete.py  test_location_context.py  test_scenario_1_1.py  test_setup.py  test_workflow_logs.py  travel_assistant.ipynb  travel_assistant.py  travel_assistant_assignment.ipynb  working_chat.py
travel_assistant/: __init__.py
travel_assistant/core/: config.py  logger.py
travel_assistant/ui/: __init__.py  streamlit_app.py
