[project]
name = "travel-assistant-optimization"
version = "0.1.0"
description = "AI-powered travel assistant for optimizing travel planning and recommendations"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Travel Assistant Team", email = "team@travelassistant.com"},
]
license = {text = "MIT"}
keywords = ["travel", "ai", "optimization", "assistant", "planning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "rich>=13.5.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "google-generativeai>=0.3.0",
    "mem0ai>=0.0.8",
    "redis>=5.0.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-google-genai>=0.0.7",
    "langgraph>=0.0.40",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "loguru>=0.7.0",
    "httpx>=0.25.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "asyncio>=3.4.3",
    "nest-asyncio>=1.5.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.1",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.6.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "notebook>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/chittivijay2003/travel-assistant-optimization"
Repository = "https://github.com/chittivijay2003/travel-assistant-optimization.git"
Issues = "https://github.com/chittivijay2003/travel-assistant-optimization/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["travel_assistant"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
target-version = "py313"
line-length = 88
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=travel_assistant", "--cov-report=term-missing"]
